--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" aria-label="Fourth navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">TAMU CS</a>
+            <a class="navbar-brand" href="#">TAMU VCIM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -30,7 +30,19 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Research</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Graduate Program</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">People</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Videos</a>
                     </li>
                 </ul>
 
@@ -41,8 +53,7 @@
 <main class="container">
     <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
         <div class="col-lg-6 px-0">
-            <h1 class="display-4 fst-italic">Computer Science</h1>
-
+            <h1 class="display-4 fst-italic">Computer Graphics</h1>
         </div>
     </div>
 
@@ -82,7 +93,7 @@
                     <dt>JavaScript (JS)</dt>
                     <dd>The programming language used to build advanced Web sites and applications</dd>
                 </dl>
-                <h2>Inline HTML elements</h2>
+                <!-- <h2>Inline HTML elements</h2>
                 <p>HTML defines a long list of available inline tags, a complete list of which can be found on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Mozilla Developer Network</a>.</p>
                 <ul>
                     <li><strong>To bold text</strong>, use <code class="language-plaintext highlighter-rouge">&lt;strong&gt;</code>.</li>
@@ -99,9 +110,10 @@
                 <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
                 <pre><code>Example code block</code></pre>
                 <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+             -->
             </article>
 
-            <article class="blog-post">
+            <!-- <article class="blog-post">
                 <h2 class="display-5 link-body-emphasis mb-1">Another blog post</h2>
                 <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
 
@@ -160,16 +172,16 @@
                     <li>Third list item to close it out</li>
                 </ul>
                 <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-            </article>
+            </article> -->
 
-            <nav class="blog-pagination" aria-label="Pagination">
+            <!-- <nav class="blog-pagination" aria-label="Pagination">
                 <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
                 <a class="btn btn-outline-secondary rounded-pill disabled" aria-disabled="true">Newer</a>
-            </nav>
+            </nav> -->
 
         </div>
 
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
             <div class="position-sticky" style="top: 2rem;">
                 <div class="p-4 mb-3 bg-body-tertiary rounded">
                     <h4 class="fst-italic">About</h4>
@@ -236,7 +248,7 @@
                     </ol>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 </main>
