add click scroll

--- a/index.html
+++ b/index.html
@@ -27,25 +27,18 @@
             <div class="collapse navbar-collapse" id="navbarsExample04">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#Introduction">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Research</a>
+                        <a class="nav-link" href="#Research">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#Graduation Program">Graduate Program</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Graduate Program</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">People</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Videos</a>
+                        <a class="nav-link" href="#People">People</a>
                     </li>
                 </ul>
-
             </div>
         </div>
 </nav>
@@ -53,14 +46,16 @@
 <main class="container">
     <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
         <div class="col-lg-6 px-0">
-            <h1 class="display-4 fst-italic">Computer Graphics</h1>
+            <h1 class="display-4 fst-italic">TAMU VCIM</h1>
         </div>
     </div>
 
     <div class="row g-5">
         <div class="col-md-8">
-                <h2 class="display-5 link-body-emphasis mb-1">Sample blog post</h2>
-                <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
+            <!-- Home -->
+            <article class="blog-post" id="Introduction">
+                <h2 class="display-5 link-body-emphasis mb-1">Introduction</h2>
+                <p class="blog-post-meta">January 1, 2021</a></p>
 
                 <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
                 <hr>
@@ -93,7 +88,7 @@
                     <dt>JavaScript (JS)</dt>
                     <dd>The programming language used to build advanced Web sites and applications</dd>
                 </dl>
-                <!-- <h2>Inline HTML elements</h2>
+                <h2>Inline HTML elements</h2>
                 <p>HTML defines a long list of available inline tags, a complete list of which can be found on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Mozilla Developer Network</a>.</p>
                 <ul>
                     <li><strong>To bold text</strong>, use <code class="language-plaintext highlighter-rouge">&lt;strong&gt;</code>.</li>
@@ -110,13 +105,12 @@
                 <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
                 <pre><code>Example code block</code></pre>
                 <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-             -->
             </article>
 
-            <!-- <article class="blog-post">
-                <h2 class="display-5 link-body-emphasis mb-1">Another blog post</h2>
+            <!-- Research -->
+            <article class="blog-post" id = "Research">
+                <h2 class="display-5 link-body-emphasis mb-1">Research</h2>
                 <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
-
                 <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
                 <blockquote>
                     <p>Longer quote goes here, maybe with some <strong>emphasized text</strong> in the middle of it.</p>
@@ -124,46 +118,12 @@
                 <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
                 <h3>Example table</h3>
                 <p>And don't forget about tables in these posts:</p>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Upvotes</th>
-                        <th>Downvotes</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>Alice</td>
-                        <td>10</td>
-                        <td>11</td>
-                    </tr>
-                    <tr>
-                        <td>Bob</td>
-                        <td>4</td>
-                        <td>3</td>
-                    </tr>
-                    <tr>
-                        <td>Charlie</td>
-                        <td>7</td>
-                        <td>9</td>
-                    </tr>
-                    </tbody>
-                    <tfoot>
-                    <tr>
-                        <td>Totals</td>
-                        <td>21</td>
-                        <td>23</td>
-                    </tr>
-                    </tfoot>
-                </table>
-
                 <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
             </article>
-
-            <article class="blog-post">
-                <h2 class="display-5 link-body-emphasis mb-1">New feature</h2>
-                <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
+            <!-- Graduation program -->
+            <article class="blog-post" id="Graduation Program">
+                <h2 class="display-5 link-body-emphasis mb-1">Graduation Program</h2>
+                <p class="blog-post-meta">December 14, 2020</p>
 
                 <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
                 <ul>
@@ -172,12 +132,20 @@
                     <li>Third list item to close it out</li>
                 </ul>
                 <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-            </article> -->
+            </article>
+            <!-- Graduation program -->
+            <article class="blog-post" id="People">
+                <h2 class="display-5 link-body-emphasis mb-1">People</h2>
+                <p class="blog-post-meta">December 14, 2020</p>
 
-            <!-- <nav class="blog-pagination" aria-label="Pagination">
-                <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
-                <a class="btn btn-outline-secondary rounded-pill disabled" aria-disabled="true">Newer</a>
-            </nav> -->
+                <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+                <ul>
+                    <li>First list item</li>
+                    <li>Second list item with a longer description</li>
+                    <li>Third list item to close it out</li>
+                </ul>
+                <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+            </article>
 
         </div>
 
